@@ -105,7 +105,7 @@ ig_reload_style (GnmItemGrid *ig)
 	GnmPane *pane = GNM_PANE (item->canvas);
 
 	gtk_style_context_save (context);
-	gtk_style_context_add_region (context, "function-marker", 0);
+	gtk_style_context_add_class (context, "function-marker");
 	gnm_style_context_get_color (context, GTK_STATE_FLAG_NORMAL,
 				     &ig->function_marker_color);
 	gtk_style_context_get_border_color (context, state,
@@ -113,7 +113,7 @@ ig_reload_style (GnmItemGrid *ig)
 	gtk_style_context_restore (context);
 
 	gtk_style_context_save (context);
-	gtk_style_context_add_region (context, "pane-divider", 0);
+	gtk_style_context_add_class (context, "pane-divider");
 	gnm_style_context_get_color (context, GTK_STATE_FLAG_NORMAL,
 				     &ig->pane_divider_color);
 	gtk_style_context_get_border (context, GTK_STATE_FLAG_NORMAL, &border);
